# CryptNest

./: .gitignore  README.md  app.py  face_unlock.py  pyproject.toml  requirements.in  requirements.txt  utils.py
face_data/: 1_face.npy  2_face.npy
instance/: cryptnest.db
migrations/versions/: b33bc67c1c81_added_face_descriptor_column_to_user_as_.py
templates/: change_password.html  dashboard.html  forgot_password.html  landing.html  layout.html  login.html  profile.html  register.html  reset_password.html
